--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,27 +1,10 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-        <h:outputStylesheet name="css/jsfcrud.css"/>
-    </h:head>
-    <h:body>
-        <br />
-        <h:link outcome="/conta/List" value="Show All Conta Items"/>
-        <br />
-        <h:link outcome="/contaCorrente/List" value="Show All ContaCorrente Items"/>
-        <br />
-        <h:link outcome="/contaEspecial/List" value="Show All ContaEspecial Items"/>
-        <br />
-        <h:link outcome="/contaPoupanca/List" value="Show All ContaPoupanca Items"/>
-        <br />
-        <h:link outcome="/movimentacao/List" value="Show All Movimentacao Items"/>
-    </h:body>
-
-
-
-
-
-</html>
-
+<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                template="./newTemplate.xhtml">
+    <ui:define name="conteudo">
+        <div>
+            Eae men kkq
+        </div>
+    </ui:define>
+</ui:composition>
