--- a/web/contaCorrente/List.xhtml
+++ b/web/contaCorrente/List.xhtml
@@ -6,16 +6,11 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/newTemplate.xhtml">
 
-
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListContaCorrenteTitle}"></h:outputText>
-        </ui:define>
-
-        <ui:define name="body">
+        <ui:define name="conteudo">
             <h:form id="ContaCorrenteListForm">
-                <p:panel header="#{bundle.ListContaCorrenteTitle}">
+                <p:panel header="CRUD Conta Corrente">
                     <p:dataTable id="datalist" value="#{contaCorrenteController.items}" var="item"
                                  selectionMode="single" selection="#{contaCorrenteController.selected}"
                                  paginator="true"
