--- a/web/contaEspecial/List.xhtml
+++ b/web/contaEspecial/List.xhtml
@@ -6,14 +6,8 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
-
-
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListContaEspecialTitle}"></h:outputText>
-        </ui:define>
-
-        <ui:define name="body">
+    <ui:composition template="/newTemplate.xhtml">
+        <ui:define name="conteudo">
             <h:form id="ContaEspecialListForm">
                 <p:panel header="#{bundle.ListContaEspecialTitle}">
                     <p:dataTable id="datalist" value="#{contaEspecialController.items}" var="item"
