--- a/web/contaPoupanca/List.xhtml
+++ b/web/contaPoupanca/List.xhtml
@@ -6,14 +6,9 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/newTemplate.xhtml">
 
-
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListContaPoupancaTitle}"></h:outputText>
-        </ui:define>
-
-        <ui:define name="body">
+        <ui:define name="conteudo">
             <h:form id="ContaPoupancaListForm">
                 <p:panel header="#{bundle.ListContaPoupancaTitle}">
                     <p:dataTable id="datalist" value="#{contaPoupancaController.items}" var="item"
