--- a/web/movimentacao/List.xhtml
+++ b/web/movimentacao/List.xhtml
@@ -6,14 +6,14 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/newTemplate.xhtml">
 
 
-        <ui:define name="title">
+<!--        <ui:define name="title">
             <h:outputText value="#{bundle.ListMovimentacaoTitle}"></h:outputText>
-        </ui:define>
+        </ui:define>-->
 
-        <ui:define name="body">
+        <ui:define name="conteudo">
             <h:form id="MovimentacaoListForm">
                 <p:panel header="#{bundle.ListMovimentacaoTitle}">
                     <p:dataTable id="datalist" value="#{movimentacaoController.items}" var="item"
