Refatoração e deposito em conta

--- a/web/adminTemplate.xhtml
+++ b/web/adminTemplate.xhtml
@@ -13,6 +13,7 @@
     </h:head>
 
     <h:body style="display: flex">
+        <p:growl id="growl" life="3000" />
 
         <div id="left">
             <p:menu toggleable="true">
