--- a/web/adminTemplate.xhtml
+++ b/web/adminTemplate.xhtml
@@ -7,8 +7,8 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <h:outputStylesheet name="./css/default.css"/>
-        <h:outputStylesheet name="./css/cssLayout.css"/>
+        <h:outputStylesheet name="/css/default.css"/>
+        <h:outputStylesheet name="/css/cssLayout.css"/>
         <title>Facelets Template</title>
     </h:head>
 
@@ -16,14 +16,16 @@
         <p:growl id="growl" life="3000" />
 
         <div id="left">
-            <p:menu toggleable="true">
-                <p:submenu label="CRUD">
-                    <p:menuitem outcome="/contaCorrente/List" value="CRUD Conta Corrente"/>
-                    <p:menuitem outcome="/contaEspecial/List" value="CRUD Conta Especial"/>
-                    <p:menuitem outcome="/contaPoupanca/List" value="CRUD Conta Poupança"/>
-                    <p:menuitem outcome="/movimentacao/List" value="CRUD Movimentações ARRACA ESSE AQ LOGO DESGRAÇA"/>            
-                </p:submenu>
-            </p:menu>
+			<h:form id="menuForm">
+				<p:menu toggleable="true">
+					<p:submenu label="CRUD">
+						<p:menuitem outcome="/contaCorrente/List" value="CRUD Conta Corrente"/>
+						<p:menuitem outcome="/contaEspecial/List" value="CRUD Conta Especial"/>
+						<p:menuitem outcome="/contaPoupanca/List" value="CRUD Conta Poupança"/>
+						<p:menuitem outcome="/movimentacao/List" value="CRUD Movimentações ARRACA ESSE AQ LOGO DESGRAÇA"/>            
+					</p:submenu>
+				</p:menu>
+			</h:form>
         </div>
         <div id="conteudo" class="left_content">
             <ui:insert name="conteudo">Content</ui:insert>
