--- a/web/conta/saque.xhtml
+++ b/web/conta/saque.xhtml
@@ -1,10 +1,19 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./contaTemplate.xhtml">
+                template="./contaTemplate.xhtml"
+				xmlns:h="http://xmlns.jcp.org/jsf/html"
+				xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="conteudo">
-        conteudo
+		<h:form>
+			<h:panelGrid columns="2" cellpadding="5">
+				<p:outputLabel for="valor" value="Valor do saque: " />
+				<p:inputNumber id="valor" value="${usuarioController.valor}" minValue="0" />
+											
+				<p:commandButton value="Sacar" action="${usuarioController.sacar}" />
+			</h:panelGrid>
+		</h:form>
     </ui:define>
 
 </ui:composition>
