--- a/web/contaPoupanca/List.xhtml
+++ b/web/contaPoupanca/List.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/newTemplate.xhtml">
+    <ui:composition template="/adminTemplate.xhtml">
 
         <ui:define name="conteudo">
             <h:form id="ContaPoupancaListForm">
