--- a/web/movimentacao/List.xhtml
+++ b/web/movimentacao/List.xhtml
@@ -6,8 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/newTemplate.xhtml">
-
+    <ui:composition template="/adminTemplate.xhtml">
 
 <!--        <ui:define name="title">
             <h:outputText value="#{bundle.ListMovimentacaoTitle}"></h:outputText>
