--- a/web/conta/transferencia.xhtml
+++ b/web/conta/transferencia.xhtml
@@ -1,10 +1,23 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./contaTemplate.xhtml">
+                template="./contaTemplate.xhtml"
+				xmlns:p="http://primefaces.org/ui"
+				xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <ui:define name="conteudo">
-        conteudo
+		<h:form>
+			<h:panelGrid columns="2" cellpadding="5">
+				<p:outputLabel for="id" value="Id da conta destino: " />
+				<p:inputNumber id="id" value="${usuarioController.idContaDestino}" minValue="0" required="true" />
+
+
+				<p:outputLabel for="valor" value="Valor da transferencia: " />
+				<p:inputNumber id="valor" value="${usuarioController.valor}" minValue="0" />
+
+				<p:commandButton value="Transferir" action="${usuarioController.transferir()}" />
+			</h:panelGrid>
+		</h:form>
     </ui:define>
 
 </ui:composition>
