Arrumando lista de movimentações

--- a/web/adminTemplate.xhtml
+++ b/web/adminTemplate.xhtml
@@ -19,10 +19,9 @@
 			<h:form id="menuForm">
 				<p:menu toggleable="true">
 					<p:submenu label="CRUD">
-						<p:menuitem outcome="/contaCorrente/List" value="CRUD Conta Corrente"/>
-						<p:menuitem outcome="/contaEspecial/List" value="CRUD Conta Especial"/>
-						<p:menuitem outcome="/contaPoupanca/List" value="CRUD Conta Poupança"/>
-						<p:menuitem outcome="/movimentacao/List" value="CRUD Movimentações ARRACA ESSE AQ LOGO DESGRAÇA"/>            
+						<p:menuitem outcome="/crudCorrente/List" value="CRUD Conta Corrente"/>
+						<p:menuitem outcome="/crudEspecial/List" value="CRUD Conta Especial"/>
+						<p:menuitem outcome="/crudPoupanca/List" value="CRUD Conta Poupança"/>
 					</p:submenu>
 				</p:menu>
 			</h:form>
