--- a/web/conta/conta.xhtml
+++ b/web/conta/conta.xhtml
@@ -13,7 +13,7 @@
 		<f:view>
 			<h:form>
 				<h1><h:outputText value="List"/></h1>
-				<p:dataTable value="#{usuarioController.contaAutenticada.movimentacoes}" var="item">
+				<p:dataTable value="#{movimentacaoView.getItens(usuarioController.contaAutenticada.numero)}" var="item">
 					<p:column>
 						<f:facet name="header">
 							<h:outputText value="Id"/>
