--- a/web/conta/saque.xhtml
+++ b/web/conta/saque.xhtml
@@ -9,7 +9,7 @@
 		<h:form>
 			<h:panelGrid columns="2" cellpadding="5">
 				<p:outputLabel for="valor" value="Valor do saque: " />
-				<p:inputNumber id="valor" value="${usuarioController.valor}" minValue="0" />
+				<p:inputNumber id="valor" value="${usuarioController.valor}" minValue="0" required="true"/>
 											
 				<p:commandButton value="Sacar" action="${usuarioController.sacar}" />
 			</h:panelGrid>
