Geração de gráfico por montante

--- a/web/conta/conta.xhtml
+++ b/web/conta/conta.xhtml
@@ -57,7 +57,7 @@
 			</h:form>
 		</f:view>
 
-		<p:chart type="line" model="#{movimentacaoView.getModel(usuarioController.contaAutenticada.numero)}" style="height:300px"/>
+		<p:chart type="bar" model="#{movimentacaoView.getModel(usuarioController.contaAutenticada.numero)}" style="height:300px"/>
     </ui:define>
 
 </ui:composition>
