Refatoração, garantir que existe um administrador cadastrado

--- a/web/adminTemplate.xhtml
+++ b/web/adminTemplate.xhtml
@@ -23,6 +23,7 @@
 						<p:menuitem outcome="/crudEspecial/List" value="CRUD Conta Especial"/>
 						<p:menuitem outcome="/crudPoupanca/List" value="CRUD Conta Poupança"/>
 					</p:submenu>
+					<p:menuitem value="Sair" ajax="false" action="${usuarioController.deslogar()}" />
 				</p:menu>
 			</h:form>
         </div>
