--- a/web/conta/conta.xhtml
+++ b/web/conta/conta.xhtml
@@ -10,8 +10,7 @@
     <ui:define name="conteudo">
 		<f:view>
 			<h:form>
-				<p:outputLabel value="Saldo da conta: ${usuarioController.contaAutenticada.saldo}" />
-
+				Saldo da conta: <h:outputText id="saldo" value="${usuarioController.contaAutenticada.saldo}"/>
 				<h1><h:outputText value="List"/></h1>
 				<p:dataTable value="#{movimentacaoView.getItens(usuarioController.contaAutenticada.numero)}" var="item">
 					<p:column>
