--- a/web/conta/deposito.xhtml
+++ b/web/conta/deposito.xhtml
@@ -7,12 +7,13 @@
 
     <ui:define name="conteudo">
 		<h:form>
+			Saldo da conta: <h:outputText id="saldo" value="${usuarioController.contaAutenticada.saldo}"/>
 			<h:panelGrid columns="2" cellpadding="5">
 				<p:outputLabel for="valor" value="Valor do depósito: " />
-				<p:inputNumber id="valor" value="${usuarioController.valor}" minValue="0" required="true" />
-
-				<p:commandButton value="Depositar" action="${usuarioController.depositar}" />
+				<p:inputNumber id="valor" value="${usuarioController.valor}" minValue="0" required="true" requiredMessage="Campo valro é necessário"/>
 			</h:panelGrid>
+			<p:messages />
+			<p:commandButton value="Depositar" action="${usuarioController.depositar}" update="@this saldo" />
 		</h:form>
     </ui:define>
 
