--- a/web/conta/deposito.xhtml
+++ b/web/conta/deposito.xhtml
@@ -3,15 +3,21 @@
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="./contaTemplate.xhtml"
 				xmlns:h="http://xmlns.jcp.org/jsf/html"
-				xmlns:p="http://primefaces.org/ui">
+				xmlns:p="http://primefaces.org/ui"
+				xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="conteudo">
 		<h:form>
-			Saldo da conta: <h:outputText id="saldo" value="${usuarioController.contaAutenticada.saldo}"/>
 			<h:panelGrid columns="2" cellpadding="5">
+				<p:outputLabel value="Saldo da conta:" /> 
+				<p:outputLabel id="saldo" value="${usuarioController.contaAutenticada.saldo}"> 
+					<f:convertNumber maxFractionDigits="2" />
+				</p:outputLabel>
+
 				<p:outputLabel for="valor" value="Valor do depósito: " />
 				<p:inputNumber id="valor" value="${usuarioController.valor}" minValue="0" required="true" requiredMessage="Campo valro é necessário"/>
 			</h:panelGrid>
+
 			<p:messages />
 			<p:commandButton value="Depositar" action="${usuarioController.depositar}" update="@this saldo" />
 		</h:form>
