--- a/web/conta/saque.xhtml
+++ b/web/conta/saque.xhtml
@@ -3,14 +3,24 @@
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="./contaTemplate.xhtml"
 				xmlns:h="http://xmlns.jcp.org/jsf/html"
-				xmlns:p="http://primefaces.org/ui">
+				xmlns:p="http://primefaces.org/ui"
+				xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="conteudo">
 		<h:form>
-			Saldo da conta: <h:outputText id="saldo" value="${usuarioController.contaAutenticada.saldo}"/>
 			<h:panelGrid columns="2" cellpadding="5">
+				<p:outputLabel value="Saldo da conta:" /> 
+				<p:outputLabel id="saldo" value="${usuarioController.contaAutenticada.saldo}"> 
+					<f:convertNumber maxFractionDigits="2" />
+				</p:outputLabel>
+
 				<p:outputLabel for="valor" value="Valor do saque: " />
-				<p:inputNumber id="valor" value="${usuarioController.valor}" minValue="0" required="true" requiredMessage="Campo valor é necessário"/>
+				<p:inputNumber id="valor" value="${usuarioController.valor}" minValue="0" required="true" requiredMessage="Campo valor é necessário">
+					<p:ajax update="cpmf" />
+				</p:inputNumber>
+
+				<p:outputLabel for="cpmf" value="Valor CPMF: " rendered="${usuarioController.renderer}" />
+				<h:outputText id="cpmf" value="${usuarioController.valorCPMF}" rendered="${usuarioController.renderer}"/>
 			</h:panelGrid>
 			<p:messages />
 										
