--- a/web/conta/contaTemplate.xhtml
+++ b/web/conta/contaTemplate.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -13,25 +14,27 @@
     </h:head>
 
     <h:body style="display: flex">
-        <p:growl id="growl" life="3000" />
+		<f:view locale="${localeControllers.locale}">
+			<p:growl id="growl" life="3000" />
 
-        <div id="left">
-	    <h:form id="menuForm">
-		    <p:menu toggleable="true">
-				<p:submenu label="CRUD">
-					<p:menuitem outcome="conta" value="Home"/>
-					<p:menuitem outcome="deposito" value="Depositar"/>
-					<p:menuitem outcome="saque" value="Sacar"/>
-					<p:menuitem outcome="transferencia" value="Transferencia"/>
-				</p:submenu>
-				<p:menuitem value="Sair" ajax="false" action="${usuarioController.deslogar()}" />
-		    </p:menu>
-	    </h:form>
-        </div>
-        <div id="conteudo" class="right_content">
-            <ui:insert name="conteudo">Content</ui:insert>
-        </div>
+			<div id="left">
+			<h:form id="menuForm">
+				<p:menu toggleable="true">
+					<p:submenu label="CRUD">
+						<p:menuitem outcome="conta" value="${bundle.ContaMenuHome}"/>
+						<p:menuitem outcome="deposito" value="${bundle.ContaMenuDepositar}"/>
+						<p:menuitem outcome="saque" value="${bundle.ContaMenuSacar}"/>
+						<p:menuitem outcome="transferencia" value="${bundle.ContaMenuTransferencia}"/>
+					</p:submenu>
+					<p:menuitem value="${bundle.ContaMenuDeslogar}" ajax="false" action="${usuarioController.deslogar()}" />
+				</p:menu>
+			</h:form>
+			</div>
+			<div id="conteudo" class="right_content">
+				<ui:insert name="conteudo">Content</ui:insert>
+			</div>
 
+		</f:view>
     </h:body>
 
 </html>
